--- a/index.qmd
+++ b/index.qmd
@@ -18,8 +18,8 @@ about:
 # About Me!
 
 Welcome! I’m Liam Cochran, a physics and computer science major currently pursuing my Bachelor's degree at Willamette University. 
-Through my high school and current college education, I have honed my skills in programmming and mathematics, as well as in tools such as Python, Java.
-Outside of work, I enjoy creating art, curating music playlists, and catching up on TV shows.
+Through my high school and current college education, I have honed my skills in programmming and mathematics, as well as in tools such as Python, Java, and SCSS.
+Outside of work, I enjoy creating art, curating music playlists, and anything sci-fi!
 
 ```{=html}
 <div  style="margin: 30px; text-align: center;">
